# AstFriend

./: .gitlab-ci.yml  README.md  pyproject.toml
.github/workflows/: bump_version.yml
core/ast_pydantic/: ast_pydantic.py
core/ast_python/: ast_class_def.py  ast_fun_def.py  ast_simpl_obj.py
core/objs/keywords/: pydantic_keywords.py  python_keywords.py
